juiceshop.yml
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: juice-shop
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: juice-shop
  replicas: 3 
  template: 
    metadata:
      labels:
        app: juice-shop
    spec:
      containers:
      - name: juice-shop
        image: bkimminich/juice-shop
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: juice-shop-clusterip
  namespace: default
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 3000
  selector:
    app: juice-shop
  type: ClusterIP
